--- a/white label/index.html
+++ b/white label/index.html
@@ -16,7 +16,7 @@
   />
   <header class="header">
   <div class="header-left">
-    <img src="assets/images/eit-logo.png" alt="Company Logo" class="logo" />
+<img src="../images/white-label/eit-logo.png" alt="Company Logo" class="logo" />
     <div class="logo-text">
     </div>
   </div>
@@ -60,7 +60,7 @@
         <strong class="email">sales@ethicalintelligent.com</strong>
       </span>
     </div>
-    
+    <button class="cta-button">Let's Talk</button>
   </div>
 </header>
 
@@ -71,11 +71,11 @@
       </h1>
       <p class="hero-subtitle">Offer cutting-edge IoT and GPS Tracking solutions under your own brand. Our white-label platform offers the infrastructure, flexibility, and scalability to enable you to provide high-<br>value services to your customers—without in-house development.</p>
       <div class="hero-features">
-        <div class="feature-item"><span class="feature-icon"><img src="assets/images/Checkmark.png" alt="Check"></span> Great quality with unbeatable performance</div>
-        <div class="feature-item"><span class="feature-icon"><img src="assets/images/Checkmark.png" alt="Check"></span> Highest Cyber security standards</div>
-        <div class="feature-item"><span class="feature-icon"><img src="assets/images/Checkmark.png" alt="Check"></span> Your domain, SSL, logo, etc.</div>
-        <div class="feature-item"><span class="feature-icon"><img src="assets/images/Checkmark.png" alt="Check"></span> You control your customer pricing</div>
-        <div class="feature-item"><span class="feature-icon"><img src="assets/images/Checkmark.png" alt="Check"></span> Priority access to our technical team</div>
+<div class="feature-item"><span class="feature-icon"><img src="../images/white-label/Checkmark.png" alt="Check"></span> Great quality with unbeatable performance</div>
+<div class="feature-item"><span class="feature-icon"><img src="../images/white-label/Checkmark.png" alt="Check"></span> Highest Cyber security standards</div>
+<div class="feature-item"><span class="feature-icon"><img src="../images/white-label/Checkmark.png" alt="Check"></span> Your domain, SSL, logo, etc.</div>
+<div class="feature-item"><span class="feature-icon"><img src="../images/white-label/Checkmark.png" alt="Check"></span> You control your customer pricing</div>
+<div class="feature-item"><span class="feature-icon"><img src="../images/white-label/Checkmark.png" alt="Check"></span> Priority access to our technical team</div>
       </div>
     </div>
 
@@ -123,7 +123,7 @@
         </div>
 
         <button type="submit" class="submit-button">
-      <img src="assets/images/submit-logo.png" alt="Submit" class="submit-icon" />
+<img src="../images/white-label/submit-logo.png" alt="Submit" class="submit-icon" />
       <span>SUBMIT</span>
     </button>
       </form>
@@ -461,7 +461,7 @@ document.addEventListener('DOMContentLoaded', function() {
               <p>Have complete control with an easy-to-use dashboard that enables you to manage users, assign roles, track devices, and monitor account activity.</p>
             </div>
             <div class="image-container">
-              <img src="./assets/images/slide1.png" alt="Admin Console">
+<img src="../images/white-label/slide1.png" alt="Admin Console">
             </div>
           </div>
           <div class="slide">
@@ -470,7 +470,7 @@ document.addEventListener('DOMContentLoaded', function() {
               <p>Provide hassle-free mobile access with customized iOS, Android, or PWA apps that embody your brand and your clients' expectations.</p>
             </div>
             <div class="image-container">
-              <img src="./assets/images/slide2.png" alt="Mobile Apps">
+<img src="../images/white-label/slide2.png" alt="Mobile Apps">
             </div>
           </div>
           <div class="slide">
@@ -479,7 +479,7 @@ document.addEventListener('DOMContentLoaded', function() {
               <p>Drive growth with a set of editable marketing content-websites, brochures, digital content, and presentations-to empower your go-to-market plan.</p>
             </div>
             <div class="image-container">
-              <img src="./assets/images/slide3.png" alt="Marketing & Sales Enablement">
+<img src="../images/white-label/slide3.png" alt="Marketing & Sales Enablement">
             </div>
           </div>
           <div class="slide">
@@ -488,7 +488,7 @@ document.addEventListener('DOMContentLoaded', function() {
               <p>Equip customers with a fresh, easy-to-use web dashboard optimized for operating with speed and simplicity on any device.</p>
             </div>
             <div class="image-container">
-              <img src="./assets/images/slide4.png" alt="User Interface">
+<img src="../images/white-label/slide4.png" alt="User Interface">
             </div>
           </div>
           <div class="slide">
@@ -497,7 +497,7 @@ document.addEventListener('DOMContentLoaded', function() {
               <p>Seamlessly integrate with external systems through a robust suite of APIs to facilitate data sharing and sophisticated automation.</p>
             </div>
             <div class="image-container">
-              <img src="./assets/images/slide5.png" alt="API Ecosystem">
+<img src="../images/white-label/slide5.png" alt="API Ecosystem">
             </div>
           </div>
           <div class="slide">
@@ -506,7 +506,7 @@ document.addEventListener('DOMContentLoaded', function() {
               <p>Grow your international presence by offering your platform in several languages, delivering localized experiences for global user bases</p>
             </div>
             <div class="image-container">
-              <img src="./assets/images/slide6.png" alt="Multilingual Support">
+<img src="../images/white-label/slide6.png" alt="Multilingual Support">
             </div>
           </div>
         </div>
@@ -521,20 +521,20 @@ document.addEventListener('DOMContentLoaded', function() {
       <!-- Column 1: GPS Tracking -->
       <div class="services-column gps-column">
         <h2>GPS Tracking Services</h2>
-        <img src="assets/images/gps.png" class="main-service-img gps-img" alt="GPS Tracking">
+<img src="../images/white-label/gps.png" class="main-service-img gps-img" alt="GPS Tracking">
         <div class="service-cards-wrapper">
           <div class="service-card">
-            <img src="assets/images/Component 1.png" class="icon" alt="Live GPS Icon">
+<img src="../images/white-label/Component 1.png" class="icon" alt="Live GPS Icon">
             <h3>Live GPS Tracking</h3>
             <p>Track vehicles, assets, or staff in real time with improved operating control and visibility.</p>
           </div>
           <div class="service-card">
-            <img src="assets/images/Component 3.png" class="icon" alt="Historical Data Icon">
+<img src="../images/white-label/Component 3.png" class="icon" alt="Historical Data Icon">
             <h3>Geofencing & Smart Alerts</h3>
             <p>Get immediate notifications when assets move in and out of designated geographic areas and assisting in security policies.</p>
           </div>
           <div class="service-card">
-            <img src="assets/images/Component 5.png" class="icon" alt="Data Intelligence Icon">
+<img src="../images/white-label/Component 5.png" class="icon" alt="Data Intelligence Icon">
             <h3>Historical Data & Analytics</h3>
             <p>View movement history and performance reporting to identify trends, enhance efficiency, and make strategic decisions.</p>
           </div>
@@ -552,24 +552,24 @@ document.addEventListener('DOMContentLoaded', function() {
 
   <!-- IoT Image -->
   <div class="iot-image-wrapper">
-    <img src="assets/images/iot.png" class="iot-img" alt="IoT Services">
+<img src="../images/white-label/iot.png" class="iot-img" alt="IoT Services">
   </div>
 
   <!-- IoT Cards -->
   <div class="iot-cards-wrapper">
     <div class="service-card">
-      <img src="assets/images/Component 2.png" class="icon" alt="Geofencing Icon">
+<img src="../images/white-label/Component 2.png" class="icon" alt="Geofencing Icon">
       <h3>Integrated Sensing Capabilities</h3>
       <p>Seamlessly incorporate diverse sensors to monitor and manage key operational processes in real time.</p>
     </div>
     <div class="service-card">
-      <img src="assets/images/Component 4.png" class="icon" alt="Integrated Sensors Icon">
+<img src="../images/white-label/Component 4.png" class="icon" alt="Integrated Sensors Icon">
       <h3>Advanced Data Intelligence</h3>
       <p>Apply sophisticated analytics to transform raw IoT data into meaningful business insights and informed decisions.
 </p>
     </div>
     <div class="service-card">
-      <img src="assets/images/Component 6.png" class="icon" alt="Remote Oversight Icon">
+<img src="../images/white-label/Component 6.png" class="icon" alt="Remote Oversight Icon">
       <h3>Remote Asset Oversight</h3>
       <p>Enable comprehensive tracking and control of assets and systems from any location with remote monitoring tools.</p>
     </div>
@@ -591,7 +591,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <div class="security-container">
       <div class="security-image">
-        <img src="assets/images/updated_vector.png" alt="Security Illustration" />
+<img src="../images/white-label/updated_vector.png" alt="Security Illustration" />
       </div>
 
       <div class="security-content">
@@ -620,25 +620,25 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <div class="benefits-wrapper">
       <div class="benefits-card">
-        <img src="assets/images/Comp1_Benefits.png" alt="Custom Branding" class="benefits-icon" />
+        <img src="../images/white-label/Comp1_Benefits.png" alt="Custom Branding" class="benefits-icon" />
         <h3>Fully Customizable Branding</h3>
         <p>Provide a unified brand experience by configuring the platform’s appearance, interface, and communications to align with your business identity.</p>
       </div>
 
       <div class="benefits-card">
-        <img src="assets/images/Comp2_Benefits.png" alt="Scalable Architecture" class="benefits-icon" />
+        <img src="../images/white-label/Comp2_Benefits.png" alt="Scalable Architecture" class="benefits-icon" />
         <h3>Scalable<br>Architecture</h3>
         <p>Drive business growth with confidence and a platform designed to scale by users, clients, and geographies.</p>
       </div>
 
       <div class="benefits-card">
-        <img src="assets/images/Comp3_Benefits.png" alt="Time to Market" class="benefits-icon" />
+        <img src="../images/white-label/Comp3_Benefits.png" alt="Time to Market" class="benefits-icon" />
         <h3>Accelerated Time-to-Market</h3>
         <p>Get to market fast with a pre-existing, tested solution that bypasses development lag and lowers initial costs.</p>
       </div>
 
       <div class="benefits-card">
-        <img src="assets/images/Comp4_Benefits.png" alt="Technical Support" class="benefits-icon" />
+        <img src="../images/white-label/Comp4_Benefits.png" alt="Technical Support" class="benefits-icon" />
         <h3>Dedicated Technical Support</h3>
         <p>Get expert help and priority support to ensure hassle-free running and ongoing service excellence for your customers.</p>
       </div>
@@ -648,12 +648,11 @@ document.addEventListener('DOMContentLoaded', function() {
   <br>
   <br>
   <br>
-  <!-- Footer Section -->
   <footer class="footer">
         <div class="footer-parent-container">
             <div class="footer-purple-container">
                 <div class="footer-icon-section">
-                    <img class="footer-icon-image" src="assets/images/colorful-logo.png" alt="colorful icon" />
+                    <img class="footer-icon-image" src="../images/white-label/colorful-logo.png" alt="colorful icon" />
                 </div>
                 <div class="footer-text-section">
                     <p class="footer-tagline-1">Let’s Work Together !</p>
@@ -670,17 +669,17 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="footer-row-1">
                         <div class="footer-side-1">
                             <div class="footer-col-2-1">
-                                <img src="assets/images/Eit Logo.png" alt="logo of company" />
+                                <img src="../images/white-label/Eit Logo.png" alt="logo of company" />
                                 <br />
                                 <p>Empowering businesses through Ethical and Intelligent IT,<br />IOT, and AI-driven digital solutions.</p>
                                 <br />
                                 <div class="footer-social-media-links">
-                                    <span><a href="https://www.facebook.com/ethicalintelligent"><img src="assets/images/Frame 1.png" alt="Facebook logo" /></a></span>
-                                    <span><a href="https://www.instagram.com/ethicalintelligent_/"><img src="assets/images/Frame 2.png" alt="Instagram logo" /></a></span>
-                                    <span><a href="https://www.linkedin.com/company/ethicalintelligent/?viewAsMember=true"><img src="assets/images/Frame 3-new.png" alt="Linkedin logo" /></a></span>
-                                    <span><a href="https://x.com/EITechnologies_"><img src="assets/images/Frame 4.png" alt="Twitter logo" /></a></span>
-                                    <span><a href="https://in.pinterest.com/ethicalintelligenttechnologies/_created/"><img src="assets/images/Frame 5.png" alt="Pinterest logo" /></a></span>
-                                    <span><a href="https://www.youtube.com/@eitworks"><img src="assets/images/Frame 6.png" alt="YouTube logo" /></a></span>
+                                    <span><a href="https://www.facebook.com/ethicalintelligent"><img src="../images/white-label/Frame 1.png" alt="Facebook logo" /></a></span>
+                                    <span><a href="https://www.instagram.com/ethicalintelligent_/"><img src="../images/white-label/Frame 2.png" alt="Instagram logo" /></a></span>
+                                    <span><a href="https://www.linkedin.com/company/ethicalintelligent/?viewAsMember=true"><img src="../images/white-label/Frame 3-new.png" alt="Linkedin logo" /></a></span>
+                                    <span><a href="https://x.com/EITechnologies_"><img src="../images/white-label/Frame 4.png" alt="Twitter logo" /></a></span>
+                                    <span><a href="https://in.pinterest.com/ethicalintelligenttechnologies/_created/"><img src="../images/white-label/Frame 5.png" alt="Pinterest logo" /></a></span>
+                                    <span><a href="https://www.youtube.com/@eitworks"><img src="../images/white-label/Frame 6.png" alt="YouTube logo" /></a></span>
                                 </div>
                             </div>
                         </div>
@@ -688,28 +687,28 @@ document.addEventListener('DOMContentLoaded', function() {
                             <div class="footer-col-2-2">
                                 <ul>
                                     <li><p class="footer-list-title">Company</p></li>
-                                    <li><span><a href="../about-us.html"><p>About Us</p></a></span></li>
-                                    <li><span><a href="../clients.html"><p>Clients</p></a></span></li>
-                                    <li><span><a href="../career"><p>Careers</p></a></span></li>
+                                    <li><span><a href="./about-us.html"><p>About Us</p></a></span></li>
+                                    <li><span><a href="./clients.html"><p>Clients</p></a></span></li>
+                                    <li><span><a href="./career"><p>Careers</p></a></span></li>
                                     <li><span><a href="https://ethicalintelligent.com/blogs"><p>Blogs</p></a></span></li>
                                 <ul>
                             </div>
                             <div class="footer-col-2-3">
                                 <ul>
                                     <li><p class="footer-list-title">Solutions</p></li>
-                                    <li><span><a href="../it-services.html"><p>IT Services</p></a></span></li>
-                                    <li><span><a href="../iot-services.html"><p>IOT</p></a></span></li>
-                                    <li><span><a href="../AI-office-automation" ><p>AI Office Automation</p></a></span></li>
-                                    <li><span><a href="../AI-Business-analytics" ><p>AI Business Analytics</p></a></span></li>
-                                    <li><span><a href="../AI no-code/low-code" ><p>AI no-code/low-code</p></a></span></li>
+                                    <li><span><a href="./it-services.html"><p>IT Services</p></a></span></li>
+                                    <li><span><a href="./iot-services.html"><p>IOT</p></a></span></li>
+                                    <li><span><a href="./AI-office-automation" ><p>AI Office Automation</p></a></span></li>
+                                    <li><span><a href="./AI-Business-analytics" ><p>AI Business Analytics</p></a></span></li>
+                                    <li><span><a href="./AI no-code/low-code" ><p>AI no-code/low-code</p></a></span></li>
                                 <ul>
                             </div>
                             <div class="footer-col-2-4">
                                 <ul>
                                     <li><p style="margin-bottom:10px;" class="footer-list-title">Contact</p></li>
-                                    <li><img src="assets/images/clock.png" alt="icon of a clock" /><p style="position: relative; top:-5px" class="footer-detail-1">Monday to Friday<br />9 AM - 8 PM IST</p></li>
+                                    <li><img src="../images/white-label/clock.png" alt="icon of a clock" /><p style="position: relative; top:-5px" class="footer-detail-1">Monday to Friday<br />9 AM - 8 PM IST</p></li>
                                     <br />
-                                    <li><img src="assets/images/symbol.png" alt="icon of symbol" /><a href="mailto:sales@ethicalintelligent.com"><p style="position: relative; top:-5px; font-size: 0.9rem;" class="footer-detail-2" >sales@ethicalintelligent.com</p></li></a>
+                                    <li><img src="../images/white-label/symbol.png" alt="icon of symbol" /><a href="mailto:sales@ethicalintelligent.com"><p style="position: relative; top:-5px; font-size: 0.9rem;" class="footer-detail-2" >sales@ethicalintelligent.com</p></li></a>
                                 </ul>
                             </div>
                         </div>
