--- a/header/header.html
+++ b/header/header.html
@@ -70,12 +70,13 @@
 
                             <li class="normal_menu mobile_menu_toggle align_mobile_lets_disc">
                                 <div class="navdiv">
-                                    <div style="background: #CCCCCC; width: 30px; height: 30px; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                                        <span style="font-size: 18px;">✉️</span>
+                                    <div style=" width: 30px; height: 30px; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                                        <img style="width: 30px; height: 30px; margin-right: 20px; background-color: white; color: black;" src="https://ethicalintelligent.com/images/new2/MAIL%20navbar.webp" alt="message">
                                     </div>
                                     <div>
+                                        <a href="mailto:sales@ethicalintelligent.com">
                                         <h6>Get in touch with us</h6>
-                                        <p>sales@ethicalintelligent.com</p>
+                                        <p>sales@ethicalintelligent.com</p></a>
                                     </div>
                                 </div>
                             </li>
