--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="navigation_baro">
         <div class="contento">
             <div id="logoo">
-                <a href="/"><img src="../images/header/EIT New Logo.webp" alt="EIT Logo"></a>
+                <a href="/"><img src="./images/header/EIT New Logo.webp" alt="EIT Logo"></a>
             </div>
             <nav id="main_navo">
                 <div id="nav_menuo">
