bugs fixed for index.html

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
       }
     }
     </script>
+    <style>
+       /* Mobile-first approach */
+main{
+    padding-top: 70px; /* Default mobile padding */
+}
+
+/* Tablet and larger */
+@media only screen and (min-width: 768px) {
+    main{
+        padding-top: 0; /* Reset or adjust for desktop */
+    }
+}
+    </style>
 </head>
 
 <body class="preloader3 dark_header sticky-header dark_sup_menu dark" id="indexpagebodyid">
