--- a/contact/contact-us.html
+++ b/contact/contact-us.html
@@ -409,6 +409,6 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NQ6TXGV5" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-     <script src="./contact-us.js"></script>
+     <script src="./contact.js"></script>
 </body>
 </html>
