--- a/blogs.html
+++ b/blogs.html
@@ -46,6 +46,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Reem+Kufi:wght@400..700&family=Sora:wght@100..800&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./blogs/blogs.css">
 
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -106,90 +107,95 @@
 
 <body class="preloader3 dark_header sticky-header dark_sup_menu dark" id="indexpagebodyid">
 
-    <div id="main_wrapper">
-        <header id="site_header">
-            <div id="navigation_bar" style="background: transparent;border-bottom: 1px solid #D9D9D9;">
-                <div class="content">
-                    <div id="logo">
-                        <a href="/">
-                            <img src="images/new/EIT New Logo.webp" alt="Eit Logo">
-                        </a>
-                    </div>
-                     <nav id="main_nav">
-                        <div id="nav_menu">
-                            <span class="mobile_menu_trigger">
-                                <a href="#" class="nav_trigger"><span></span></a>
-                            </span>
-                             <ul id="navy" class="clearfix">
-                                <li class="normal_menu mobile_menu_toggle ">
-                                    <a href="/"><span style="color: #002E8A;">Home</span></a>
-                                </li>
-
-                                <li class="has_mega_menu mobile_menu_toggle current_page_item">
-                                    <a href=""><span class="activeNavBoxSpan">
-                                            <p class="activeNavBox" style="margin-bottom: 0;">Services</p>
-                                        </span></a>
-                                    <ul class="mega_menu" style="height: 30vh; max-width: fit-content;left: 43%;box-shadow: -4px -4px 8px rgba(0, 0, 0, 0.2),
-                4px 0 8px rgba(0, 0, 0, 0.2);     ">
-                                        <li style="width: fit-content;">
-                                            <ul>
-                                                <li style="height:10vh"><a href="it-services.html"><span>IT Services</span></a></li>
-                                                <li style="height:10vh"><a href="iot-services.html"><span>IOT </span></a></li>
-                                                <li style="height:10vh"><a href="./ai_development_services/ai_development_service.html"><span><p> AI</p></span></a>
-                                                    <ul>
-                                                    <li style="height:7vh"><a href=""><span>AI Powered No Code Low Code</span></a></li>
-                                                    <li style="height:7vh"><a href="./business analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
-                                                    <li style="height:7vh"><a href="./business automation/index.html"><span>AI Powered Office Automation</span></a></li>
-                                                    </ul>
-                                                </li>
-                                                
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="has_mega_menu mobile_menu_toggle">
-                                    <a href="#"><span style="color: #002E8A;">Who We Are</span></a>
-                                    <ul class="mega_menu" style="max-width: fit-content;left: 55%;box-shadow: -4px -4px 8px rgba(0, 0, 0, 0.2),
-                4px 0 8px rgba(0, 0, 0, 0.2);">
-                                        <li style="width: fit-content;">
-                                            <ul>
-                                                <li><a href="about-us.html"><span>About Us</span></a></li>
-                                                <li><a href="clients.html"><span>Clients</span></a></li>
-                                                <!-- <li><a href="case-studies.html"><span>Case Studies</span></a></li> -->
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <!-- enddd -->
-                                <li class="normal_menu mobile_menu_toggle">
-                                    <a href="./contact-us.html"><span style="color: #002E8A;">Contact Us</span></a>
-                                </li>
-                                <li class="normal_menu mobile_menu_toggle">
-                                    <a href="blogs.html"><span style="color: #002E8A;">Blogs</span></a>
-                                </li>
-
-                                <li class="normal_menu mobile_menu_toggle align_mobile_lets_disc"
-                                    style=" width: fit-content; padding: 15px 5px;">
-
-                                    <div class="navdiv">
-                                        <img src="images/new2/MAIL navbar.webp" alt="">
-                                        <div>
-                                            <h6>Get in touch with us</h6>
-                                            <p>sales@ethicalintelligent.com</p>
-                                        </div>
-                                    </div>
-                                </li>
-
-                            </ul>
-
-                        </div>
-                    </nav>
-                    <!-- End Nav -->
-
-                    <div class="clear"></div>
-                </div>
+    <header id="blogs-site_header">
+    <div id="blogs-navigation_bar">
+        <div class="blogs-content">
+            <div id="blogs-logo">
+                <a href="/">
+                    <img src="./images/header/EIT New Logo.webp" alt="">
+                </a>
             </div>
-        </header>
+            <nav id="blogs-main_nav">
+                <div id="blogs-nav_menu">
+                    <ul id="blogs-navy" class="blogs-clearfix">
+                        <li class="blogs-normal_menu blogs-mobile_menu_toggle">
+                            <a href="/"><span>Home</span></a>
+                        </li>
+
+                        <li class="blogs-has_mega_menu blogs-mobile_menu_toggle blogs-current_page_item">
+                            <a href="#">
+                                <span class="blogs-activeNavBoxSpan">
+                                    <p class="blogs-activeNavBox">Services</p>
+                                </span>
+                            </a>
+                            <button class="blogs-dropdown-toggle">+</button>
+                            <ul class="blogs-mega_menu">
+                                <li>
+                                    <ul>
+                                        <li><a href="it-services.html"><span>IT Services</span></a></li>
+                                        <li><a href="iot-services.html"><span>IOT</span></a></li>
+                                        <li class="blogs-has_sub_sub_menu">
+                                            <a href="./ai_development_services/ai_development_service.html">
+                                                <span>AI</span>
+                                            </a>
+                                            <button class="blogs-dropdown-toggle">+</button>
+                                            <ul>
+                                                <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
+                                                <li><a href="./business analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
+                                                <li><a href="./business automation/index.html"><span>AI Powered Office Automation</span></a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="blogs-has_mega_menu blogs-mobile_menu_toggle">
+                            <a href="#"><span>Who We Are</span></a>
+                            <button class="blogs-dropdown-toggle">+</button>
+                            <ul class="blogs-mega_menu">
+                                <li>
+                                    <ul>
+                                        <li><a href="about-us.html"><span>About Us</span></a></li>
+                                        <li><a href="clients.html"><span>Clients</span></a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="blogs-normal_menu blogs-mobile_menu_toggle">
+                            <a href="contact-us.html"><span>Contact Us</span></a>
+                        </li>
+                        <li class="blogs-normal_menu blogs-mobile_menu_toggle">
+                            <a href="blogs.html"><span>Blogs</span></a>
+                        </li>
+
+                        <li class="blogs-normal_menu blogs-mobile_menu_toggle blogs-align_mobile_lets_disc">
+                            <div class="blogs-navdiv">
+                                <div style="width: 30px; height: 30px; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                                    <img style="width: 30px; height: 30px; margin-right: 20px; background-color: white; color: black;" src="https://ethicalintelligent.com/images/new2/MAIL%20navbar.webp" alt="message">
+                                </div>
+                                <div>
+                                    <a href="mailto:sales@ethicalintelligent.com">
+                                        <h6>Get in touch with us</h6>
+                                        <p>sales@ethicalintelligent.com</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="blogs-clear"></div>
+        </div>
+        <span class="blogs-mobile_menu_trigger">
+            <a href="#" class="blogs-nav_trigger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+        </span>
+    </div>
+</header>
+
         <!-- End Main Header -->
         <section class="s1blogs">
             <div class="s1blogsl">
@@ -1124,6 +1130,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 <!-- lets talk icon start end -->
+ <script src="./blogs/blogs.js"></script>
 </body>
 
 </html>
