bugs fixed for all the pages and header,footer fitted for all..

--- a/clients.html
+++ b/clients.html
@@ -115,7 +115,7 @@
                 <div id="nav_menuo">
                     <ul id="navyo" class="clearfixo">
                         <li class="normal_menuo mobile_menu_toggleo">
-                            <a href="#"><span class="activeNavBoxSpano"><p class="activeNavBoxo">Home</p></span></a>
+                            <a href="/"><span><p >Home</p></span></a>
                         </li>
                         <li class="has_mega_menuo mobile_menu_toggleo current_page_itemo">
                             <a href="#"><span>Services</span></a>
@@ -139,7 +139,7 @@
                             </ul>
                         </li>
                         <li class="has_mega_menuo mobile_menu_toggleo">
-                            <a href="#"><span>Who We Are</span></a>
+                            <a href="#"><p class="activeNavBoxo">Who We Are</p></a>
                             <button class="dropdown-toggleo">+</button>
                             <ul class="mega_menuo">
                                 <li>
@@ -151,7 +151,7 @@
                             </ul>
                         </li>
                         <li class="normal_menuo mobile_menu_toggleo">
-                            <a href="contact-us.html"><span>Contact Us</span></a>
+                            <a href="contact/contact-us.html"><span>Contact Us</span></a>
                         </li>
                         <li class="normal_menuo mobile_menu_toggleo">
                             <a href="blogs.html"><span>Blogs</span></a>
