--- a/contact/contact-us.html
+++ b/contact/contact-us.html
@@ -124,7 +124,7 @@
                         <li class="contact-has_mega_menu contact-mobile_menu_toggle contact-current_page_item">
                             <a href="#">
                                 <span class="contact-activeNavBoxSpan">
-                                    <p class="contact-activeNavBox">Services</p>
+                                    <p>Services</p>
                                 </span>
                             </a>
                             <button class="contact-dropdown-toggle">+</button>
@@ -154,17 +154,17 @@
                             <ul class="contact-mega_menu">
                                 <li>
                                     <ul>
-                                        <li><a href="about-us.html"><span>About Us</span></a></li>
-                                        <li><a href="clients.html"><span>Clients</span></a></li>
+                                        <li><a href="../about-us.html"><span>About Us</span></a></li>
+                                        <li><a href="../clients.html"><span>Clients</span></a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
                         <li class="contact-normal_menu contact-mobile_menu_toggle">
-                            <a href="contact-us.html"><span>Contact Us</span></a>
+                            <a href="../contact/contact-us.html"><span><p class="contact-activeNavBox">Contact Us</p></span></a>
                         </li>
                         <li class="contact-normal_menu contact-mobile_menu_toggle">
-                            <a href="blogs.html"><span>Blogs</span></a>
+                            <a href="../blogs.html"><span>Blogs</span></a>
                         </li>
 
                         <li class="contact-normal_menu contact-mobile_menu_toggle contact-align_mobile_lets_disc">
