--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ main{
                             </ul>
                         </li>
                         <li class="normal_menuo mobile_menu_toggleo">
-                            <a href="contact-us.html"><span>Contact Us</span></a>
+                            <a href="./contact/contact-us.html"><span>Contact Us</span></a>
                         </li>
                         <li class="normal_menuo mobile_menu_toggleo">
                             <a href="blogs.html"><span>Blogs</span></a>
