--- a/it-services.html
+++ b/it-services.html
@@ -274,7 +274,7 @@
                             </ul>
                         </li>
                         <li class="it-services-normal_menu it-services-mobile_menu_toggle">
-                            <a href="contact-us.html"><span>Contact Us</span></a>
+                            <a href="contact/contact-us.html"><span>Contact Us</span></a>
                         </li>
                         <li class="it-services-normal_menu it-services-mobile_menu_toggle">
                             <a href="blogs.html"><span>Blogs</span></a>
