it services bugs fixed

--- a/it-services.html
+++ b/it-services.html
@@ -204,6 +204,18 @@
                 }
                 </script>
     <!-- schema markup -->
+     <style>
+        main{
+    padding-top: 70px; /* Default mobile padding */
+}
+
+/* Tablet and larger */
+@media only screen and (min-width: 768px) {
+    main{
+        padding-top: 0; /* Reset or adjust for desktop */
+    }
+}
+     </style>
 </head>
 
 <!-- Class ( site_boxed - dark - preloader1 - preloader2 - preloader3 - light_header - dark_sup_menu - menu_button_mode - transparent_header - header_on_side ) -->
