linking of pages

--- a/blogs.html
+++ b/blogs.html
@@ -302,7 +302,7 @@
               <div class="footer-cta">
                 <h3>Let's Work Together!</h3>
                 <p>Have a project in mind? Let's build something great together.</p>
-                <a href="../contact-us.html" class="footer-button">Contact Us</a>
+                <a href="contact/contact-us.html" class="footer-button">Contact Us</a>
                 <p class="footer-cta-subtext">Start a conversation with our experts and discover how our AI-powered solutions can transform your business.</p>
               </div>
             </div>
