--- a/clients.html
+++ b/clients.html
@@ -233,9 +233,9 @@
                         <div class="box animate fadeInUp">
                             <img src="images/clients/c2-saudi.jpg" width="85%" alt="client-saudi">
                         </div>
-                        <div class="box animate fadeInUp">
+                        <!-- <div class="box animate fadeInUp">
                             <img src="images/clients/c4-saudi2.jpg" width="85%" alt="client-saudi2">
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
@@ -284,7 +284,7 @@
               <div class="footer-cta">
                 <h3>Let's Work Together!</h3>
                 <p>Have a project in mind? Let's build something great together.</p>
-                <a href="../contact-us.html" class="footer-button">Contact Us</a>
+                <a href="contact/contact-us.html" class="footer-button">Contact Us</a>
                 <p class="footer-cta-subtext">Start a conversation with our experts and discover how our AI-powered solutions can transform your business.</p>
               </div>
             </div>
