--- a/ai_development_services/ai_development_service.html
+++ b/ai_development_services/ai_development_service.html
@@ -50,17 +50,17 @@
                                 <ul class="mega_menu">
                                     <li>
                                         <ul>
-                                            <li><a href="it-services.html"><span>IT Services</span></a></li>
-                                            <li><a href="iot-services.html"><span>IOT</span></a></li>
+                                            <li><a href="../it-services.html"><span>IT Services</span></a></li>
+                                            <li><a href="../iot-services.html"><span>IOT</span></a></li>
                                             <li class="has_sub_sub_menu">
-                                                <a href="./ai_development_services/ai_development_service.html">
+                                                <a href="../ai_development_services/ai_development_service.html">
                                                     <span>AI</span>
                                                 </a>
                                                 <button class="dropdown-toggle">+</button>
                                                 <ul>
                                                     <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
-                                                    <li><a href="./business analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
-                                                    <li><a href="./business automation/index.html"><span>AI Powered Office Automation</span></a></li>
+                                                    <li><a href="../business analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
+                                                    <li><a href="../business automation/index.html"><span>AI Powered Office Automation</span></a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -73,8 +73,8 @@
                                 <ul class="mega_menu">
                                     <li>
                                         <ul>
-                                            <li><a href="about-us.html"><span>About Us</span></a></li>
-                                            <li><a href="clients.html"><span>Clients</span></a></li>
+                                            <li><a href="../about-us.html"><span>About Us</span></a></li>
+                                            <li><a href="../clients.html"><span>Clients</span></a></li>
                                         </ul>
                                     </li>
                                 </ul>
