--- a/contact/contact-us.html
+++ b/contact/contact-us.html
@@ -131,17 +131,17 @@
                             <ul class="contact-mega_menu">
                                 <li>
                                     <ul>
-                                        <li><a href="it-services.html"><span>IT Services</span></a></li>
-                                        <li><a href="iot-services.html"><span>IOT</span></a></li>
+                                        <li><a href="../it-services.html"><span>IT Services</span></a></li>
+                                        <li><a href="../iot-services.html"><span>IOT</span></a></li>
                                         <li class="contact-has_sub_sub_menu">
-                                            <a href="./ai_development_services/ai_development_service.html">
+                                            <a href="../ai_development_services/ai_development_service.html">
                                                 <span>AI</span>
                                             </a>
                                             <button class="contact-dropdown-toggle">+</button>
                                             <ul>
                                                 <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
-                                                <li><a href="./business analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
-                                                <li><a href="./business automation/index.html"><span>AI Powered Office Automation</span></a></li>
+                                                <li><a href="../business analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
+                                                <li><a href="../business automation/index.html"><span>AI Powered Office Automation</span></a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -311,7 +311,7 @@
               <div class="footer-cta">
                 <h3>Let's Work Together!</h3>
                 <p>Have a project in mind? Let's build something great together.</p>
-                <a href="../contact-us.html" class="footer-button">Contact Us</a>
+                <a href="#" class="footer-button">Contact Us</a>
                 <p class="footer-cta-subtext">Start a conversation with our experts and discover how our AI-powered solutions can transform your business.</p>
               </div>
             </div>
