--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ main{
                             </ul>
                         </li>
                         <li class="normal_menuo mobile_menu_toggleo">
-                            <a href="./contact/contact-us.html"><span>Contact Us</span></a>
+                            <a href="contact/contact-us.html"><span>Contact Us</span></a>
                         </li>
                         <li class="normal_menuo mobile_menu_toggleo">
                             <a href="blogs.html"><span>Blogs</span></a>
@@ -703,7 +703,7 @@ main{
                     <div class="footer-cta">
                         <h3>Let's Work Together!</h3>
                         <p>Have a project in mind? Let's build something great together.</p>
-                        <a href="../contact-us.html" class="footer-button">Contact Us</a>
+                        <a href="contact/contact-us.html" class="footer-button">Contact Us</a>
                         <p class="footer-cta-subtext">Start a conversation with our experts and discover how our AI-powered solutions can transform your business.</p>
                     </div>
                 </div>
