--- a/iot-services.html
+++ b/iot-services.html
@@ -229,12 +229,12 @@
                                         <li><a href="it-services.html"><span>IT Services</span></a></li>
                                         <li><a href="iot-services.html"><span class="activeNavBoxSpano">IOT</span></a></li>
                                         <li class="has_sub_sub_menuo">
-                                            <a href="./ai_development_services/ai_development_service.html"><span>AI</span></a>
+                                            <a href="ai_development_services/ai_development_service.html"><span>AI</span></a>
                                             <button class="dropdown-toggleo">+</button>
                                             <ul>
                                                 <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
-                                                <li><a href="./business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
-                                                <li><a href="./business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
+                                                <li><a href="business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
+                                                <li><a href="business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -254,7 +254,7 @@
                             </ul>
                         </li>
                         <li class="normal_menuo mobile_menu_toggleo">
-                            <a href="./contact/contact-us.html"><span>Contact Us</span></a>
+                            <a href="contact/contact-us.html"><span>Contact Us</span></a>
                         </li>
                         <li class="normal_menuo mobile_menu_toggleo">
                             <a href="blogs.html"><span>Blogs</span></a>
@@ -1155,7 +1155,7 @@ Assess driving patterns to promote safety, reduce accidents, and lower maintenan
               <div class="footer-cta">
                 <h3>Let's Work Together!</h3>
                 <p>Have a project in mind? Let's build something great together.</p>
-                <a href="../contact-us.html" class="footer-button">Contact Us</a>
+                <a href="contact/contact-us.html" class="footer-button">Contact Us</a>
                 <p class="footer-cta-subtext">Start a conversation with our experts and discover how our AI-powered solutions can transform your business.</p>
               </div>
             </div>
