--- a/it-services.html
+++ b/it-services.html
@@ -265,8 +265,8 @@
                                             <button class="it-services-dropdown-toggle">+</button>
                                             <ul>
                                                 <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
-                                                <li><a href="./business analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
-                                                <li><a href="./business automation/index.html"><span>AI Powered Office Automation</span></a></li>
+                                                <li><a href="business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
+                                                <li><a href="business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -1164,7 +1164,7 @@
               <div class="footer-cta">
                 <h3>Let's Work Together!</h3>
                 <p>Have a project in mind? Let's build something great together.</p>
-                <a href="../contact-us.html" class="footer-button">Contact Us</a>
+                <a href="contact/contact-us.html" class="footer-button">Contact Us</a>
                 <p class="footer-cta-subtext">Start a conversation with our experts and discover how our AI-powered solutions can transform your business.</p>
               </div>
             </div>
